# loto-cli

./: LICENSE  Makefile  README.md  lotofacil_jogos.csv  megasena_jogos.csv  pyproject.toml  requeriments.txt
history/: lotofacil.csv  megasena.csv
loto_cli_plus/: cli.py  export.py  grasp.py  history.py  metrics.py  pool.py  rules.py  specs.py
